# haskell-easy-mode

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  README.md  easy-mode.cabal  flake.nix  package.yaml
app/: Main.hs
doc/: prepare.md
src/: EasyMode.hs
src/EasyMode/: Basics.hs  Cast.hs  Crypt.hs  Error.hs  HexString.hs  Layer1.hs  Layer2.hs  Layer3.hs  List.hs  Shell.hs  Show.hs
src/EasyMode/Layer1/: Basics.hs  Error.hs  Show.hs
src/EasyMode/Layer2/: Cast.hs
src/EasyMode/Layer3/: List.hs
src/EasyMode/Layers/: L1.hs  L2.hs  L3.hs
test/: Readme.hs  Readme.lhs  Spec.hs  Test.hs
