cabal-version:      2.4
name:               easy-mode
version:            0.1.0.0

synopsis: an easy-to-use alternative of prelude
description: Please see the README on GitHub at <https://github.com/luochen1990/haskell-easy-mode#readme>
homepage: https://github.com/luochen1990/haskell-easy-mode#readme
bug-reports: https://github.com/luochen1990/haskell-easy-mode/issues

author: LuoChen
maintainer: luochen1990@gmail.com
copyright: 2022 LuoChen
-- license:
license-file: LICENSE
-- build-type: Simple
extra-source-files:
    README.md
    ChangeLog.md

library
  exposed-modules:
      EasyMode
  other-modules:
      EasyMode.Layer1.Basics,
      EasyMode.Layer1.Error,
      EasyMode.Layer1,
      EasyMode.Layer2.Cast,
      EasyMode.Layer2,
      EasyMode.Layer3.List,
      EasyMode.Layer3,
      Paths_easy_mode
  default-extensions:
      NoImplicitPrelude,
      ScopedTypeVariables,
      TypeApplications,
      PartialTypeSignatures,
      FlexibleContexts,
      FlexibleInstances,
      MultiParamTypeClasses
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      ghc-prim,
      extra,
      containers,
      memory,
      bytestring,
      text,
      cryptonite,
  default-language: Haskell2010

--executable easy-mode
--  main-is: Main.hs
--  other-modules:
--      Paths_easy_mode
--  hs-source-dirs:
--      app
--  ghc-options: -threaded -rtsopts -with-rtsopts=-N
--  build-depends:
--      base >=4.7 && <5
--    , easy-mode
--  default-language: Haskell2010

test-suite easy-mode-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Paths_easy_mode
  default-extensions:
      NoImplicitPrelude
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , easy-mode
  default-language: Haskell2010

