cabal-version: 3.0

-- DOC: https://cabal.readthedocs.io/en/latest/cabal-package.html

name:         easy-mode
version:      0.1.0.0
description:  Please see the README on GitHub at <https://github.com/luochen1990/haskell-easy-mode#readme>
homepage:     https://github.com/luochen1990/haskell-easy-mode#readme
bug-reports:  https://github.com/luochen1990/haskell-easy-mode/issues
author:       LuoChen
maintainer:   luochen1990@gmail.com
copyright:    2022 LuoChen
license:      GPL-3.0-or-later
license-file: LICENSE
build-type:   Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/luochen1990/haskell-easy-mode

common lib-options
  default-language: Haskell2010
  other-modules:
      Paths_easy_mode
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , cryptonite
    , extra
    , ghc-prim
    , hashable
    , memory
    , process
    , text
    , text-show
    , unordered-containers
  default-extensions:
      NoImplicitPrelude
      ScopedTypeVariables
      PartialTypeSignatures
      TypeApplications
      FlexibleContexts
      FlexibleInstances
      MultiParamTypeClasses
      OverloadedStrings
      OverloadedRecordDot
      DuplicateRecordFields
      NoFieldSelectors
      DeriveDataTypeable
      DerivingVia
      StandaloneDeriving

library
  import: lib-options
  exposed-modules:
      EasyMode
      EasyMode.Basics
      EasyMode.Cast
      EasyMode.Crypt
      EasyMode.Error
      EasyMode.HexString
      EasyMode.Layers.L1
      EasyMode.Layers.L2
      EasyMode.Layers.L3
      EasyMode.List
      EasyMode.Shell
      EasyMode.Show
  hs-source-dirs:
      src

common user-options
  default-language: Haskell2010
  other-modules:
      Paths_easy_mode
  build-depends:
      base >=4.7 && <5
      , easy-mode
  default-extensions:
      OverloadedStrings
      OverloadedRecordDot
      DuplicateRecordFields
      NoFieldSelectors
      NoImplicitPrelude
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable easy-mode-exe
  import: user-options
  main-is: Main.hs
  hs-source-dirs:
      app

test-suite easy-mode-test
  import: user-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test

test-suite readme-test
  import: user-options
  type: exitcode-stdio-1.0
  main-is: Readme.hs
  hs-source-dirs:
      test
